[project]
name = "gen_rl"
version = "0.0.1"
license = { file = "LICENSE" }
authors = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" },
]
maintainers = [
    { name = "Valentin Yuryev", email = "valentin.yuryev@gmail.com" }
]
description = "Generative Design using Reinforcement Learning."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Education",
    # Pick your license as you wish (see also "license" above)
    "License :: OSI Approved :: MIT License",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project.entry-points."mjlab.tasks"]
gen_rl = "gen_rl"